--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,10 @@
         {
             "type": "composer",
             "url": "https://connect.advancedcustomfields.com"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/bernardhanna/woo-local-pickup.git"
         }
     ],
     "autoload": {
@@ -54,11 +58,12 @@
     },
     "require": {
         "php": ">=8.0",
+        "bernardhanna/woo-local-pickup": "dev-main",
         "blade-ui-kit/blade-heroicons": "^2.1",
         "blade-ui-kit/blade-icons": "^1.5",
         "composer/installers": "^2.2",
         "generoi/sage-woocommerce": "^1.0",
-        "guzzlehttp/guzzle": "^7.5",
+        "guzzlehttp/guzzle": "^7.8",
         "hexbit/sage-woocommerce": "^1.0",
         "johnbillion/extended-cpts": "^5.0",
         "log1x/acf-composer": "^2.1",
@@ -68,6 +73,7 @@
         "log1x/sage-html-forms": "^1.0",
         "masterminds/html5": "^2.8",
         "oscarotero/env": "^2.1",
+        "raiym/instagram-php-scraper": "^0.5.0",
         "roots/acorn": "^3.1",
         "roots/bedrock-autoloader": "^1.0",
         "roots/bedrock-disallow-indexing": "^2.0",
@@ -79,13 +85,18 @@
         "stoutlogic/acf-builder": "^1.12",
         "vlucas/phpdotenv": "^5.5",
         "wpackagist-plugin/acf-content-analysis-for-yoast-seo": "^3.1",
+        "wpackagist-plugin/advanced-forms": "1.9.3.2",
+        "wpackagist-plugin/connect-sendgrid-for-emails": "^1.11",
         "wpackagist-plugin/duplicate-post-page-menu-custom-post-type": "^2.3",
+        "wpackagist-plugin/force-regenerate-thumbnails": "^2.1",
+        "wpackagist-plugin/hcaptcha-for-forms-and-more": "^3.3",
         "wpackagist-plugin/html-forms": "^1.3",
         "wpackagist-plugin/insta-gallery": "^4.1",
         "wpackagist-plugin/safe-svg": "^2.1",
         "wpackagist-plugin/woocommerce": "^7.8",
         "wpackagist-plugin/wordfence": "^7.10",
         "wpackagist-plugin/wordpress-seo": "^20.10",
+        "wpackagist-plugin/wp-mail-smtp": "^3.9",
         "wpengine/advanced-custom-fields-pro": "^6.1"
     },
     "require-dev": {
