--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@roots/sage": "6.13.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/alpinejs": "^3.7.1",
+    "@types/leaflet": "^1.9.4",
     "@types/wordpress__block-editor": "11.5.1",
     "@types/wordpress__blocks": "12.5.0",
     "autoprefixer": "^10.4.14",
@@ -51,6 +52,7 @@
     "alpinejs": "^3.12.3",
     "flowbite": "^1.8.0",
     "glidejs": "^2.1.0",
+    "leaflet": "^1.9.4",
     "postcss-loader": "^7.3.3",
     "postcss-scss": "^4.0.6",
     "slick-carousel": "^1.8.1",
