--- a/composer.json
+++ b/composer.json
@@ -93,6 +93,7 @@
         "wpackagist-plugin/html-forms": "^1.3",
         "wpackagist-plugin/insta-gallery": "^4.1",
         "wpackagist-plugin/safe-svg": "^2.1",
+        "wpackagist-plugin/updraftplus": "^1.23",
         "wpackagist-plugin/woocommerce": "^7.8",
         "wpackagist-plugin/wordfence": "^7.10",
         "wpackagist-plugin/wordpress-seo": "^20.10",
