updates after being away from this project

--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ public/content/uploads/*
 !public/content/uploads/.gitkeep
 public/content/cache/*
 public/dist/*
+public/content/updraft/*
 
 # WordPress
 public/wp
