--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@ public/content/uploads/*
 public/content/cache/*
 public/dist/*
 public/content/updraft/*
-
+public/content/updraft/backup_2023-12-11-1011_Rolling_Donut_2b4440752065-uploads.zip
 # WordPress
 public/wp
 public/.htaccess
