--- a/composer.json
+++ b/composer.json
@@ -38,8 +38,19 @@
             ]
         },
         {
-            "type": "composer",
-            "url": "https://connect.advancedcustomfields.com"
+            "type": "package",
+            "package": {
+                "name": "advanced-custom-fields/advanced-custom-fields-pro",
+                "version": "6.1",
+                "type": "wordpress-plugin",
+                "dist": {
+                    "type": "zip",
+                    "url": "https://connect.advancedcustomfields.com/v2/plugins/download?p=pro&t=6.1&k=b3JkZXJfaWQ9NjIzMjB8dHlwZT1kZXZlbG9wZXJ8ZGF0ZT0yMDE1LTA4LTIwIDE0OjEyOjU4"
+                },
+                "require": {
+                    "composer/installers": "^1.0"
+                }
+            }
         },
         {
             "type": "vcs",
