--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "flowbite": "^1.8.0",
     "glidejs": "^2.1.0",
     "leaflet": "^1.9.4",
+    "nice-select2": "^2.1.0",
     "postcss-loader": "^7.3.3",
     "postcss-scss": "^4.0.6",
     "sharp": "^0.33.1",
