--- a/composer.json
+++ b/composer.json
@@ -129,6 +129,7 @@
         "roots/wp-stage-switcher": "^2.2",
         "stoutlogic/acf-builder": "^1.12",
         "vlucas/phpdotenv": "^5.5",
+        "wpackagist-plugin/ajax-search-for-woocommerce": "*",
         "wpackagist-plugin/hcaptcha-for-forms-and-more": "^3.3",
         "wpackagist-plugin/html-forms": "^1.3",
         "wpackagist-plugin/insta-gallery": "^4.1",
