--- a/composer.json
+++ b/composer.json
@@ -47,6 +47,10 @@
         },
         {
             "type": "vcs",
+            "url": "https://github.com/bernardhanna/iconic-woo-delivery-slots.git"
+        },
+        {
+            "type": "vcs",
             "url": "https://github.com/bernardhanna/mt-future-orders.git"
         },
         {
@@ -63,10 +67,6 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/bernardhanna/woocommerce-shipping-local-pickup-plus.git"
-        },
-        {
-            "type": "vcs",
             "url": "https://github.com/bernardhanna/woocommerce-delivery-area-pro.git"
         },
         {
@@ -75,7 +75,11 @@
         },
         {
             "type": "vcs",
-            "url": "https://github.com/bernardhanna/woo-local-pickup.git"
+            "url": "https://github.com/bernardhanna/woo-product-bundle-premium.git"
+        },
+        {
+            "type": "vcs",
+            "url": "https://github.com/bernardhanna/woocommerce-shipping-local-pickup-plus.git"
         },
         {
             "type": "vcs",
@@ -94,17 +98,17 @@
     },
     "require": {
         "php": ">=8.0",
-        "wpengine/advanced-custom-fields-pro": "*",
         "bernardhanna/gravityforms": "dev-main",
+        "bernardhanna/iconic-woo-delivery-slots": "dev-main",
         "bernardhanna/mt-future-orders": "dev-main",
         "bernardhanna/mt-memotech-fixes": "dev-main",
         "bernardhanna/mt-woo-sales-by-country-reports": "dev-main",
+        "bernardhanna/updraftplus": "dev-main",
         "bernardhanna/woocommerce-customer-order-csv-export": "dev-main",
-        "bernardhanna/woocommerce-shipping-local-pickup-plus": "dev-main",
         "bernardhanna/woocommerce-delivery-area-pro": "dev-main",
         "bernardhanna/woocommerce-pdf-ips-pro": "dev-main",
-        "bernardhanna/woo-local-pickup": "dev-main",
-        "bernardhanna/updraftplus": "dev-main",
+        "bernardhanna/woo-product-bundle-premium": "dev-main",
+        "bernardhanna/woocommerce-shipping-local-pickup-plus": "dev-main",
         "blade-ui-kit/blade-heroicons": "^2.1",
         "blade-ui-kit/blade-icons": "^1.5",
         "composer/installers": "^2.2",
@@ -121,8 +125,10 @@
         "oscarotero/env": "^2.1",
         "raiym/instagram-php-scraper": "^0.5.0",
         "roots/acorn": "^3.1",
+        "roots/acorn-prettify": "^1.0",
         "roots/bedrock-autoloader": "^1.0",
         "roots/bedrock-disallow-indexing": "^2.0",
+        "roots/soil": "^4.1",
         "roots/wordpress": "6.2.2",
         "roots/wp-config": "1.0.0",
         "roots/wp-password-bcrypt": "1.1.0",
@@ -130,7 +136,6 @@
         "stoutlogic/acf-builder": "^1.12",
         "vlucas/phpdotenv": "^5.5",
         "wpackagist-plugin/ajax-search-for-woocommerce": "*",
-        "wpackagist-plugin/hcaptcha-for-forms-and-more": "^3.3",
         "wpackagist-plugin/html-forms": "^1.3",
         "wpackagist-plugin/insta-gallery": "^4.1",
         "wpackagist-plugin/updraftplus": "^1.23",
@@ -142,7 +147,7 @@
         "wpackagist-plugin/wordfence": "^7.10",
         "wpackagist-plugin/wordpress-seo": "^20.10",
         "wpackagist-plugin/wp-mail-smtp": "^3.9",
-        "roots/soil": "^4.1"
+        "wpengine/advanced-custom-fields-pro": "*"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
