--- a/composer.json
+++ b/composer.json
@@ -170,8 +170,8 @@
         "hexbit/sage-woocommerce": "^1.0",
         "ibericode/html-forms": "dev-main",
         "johnbillion/extended-cpts": "^5.0",
-        "junaidbhura/wp-all-export-pro": "*",
-        "junaidbhura/wp-all-import-pro": "*",
+        "junaidbhura/wp-all-export-pro": "^1.8",
+        "junaidbhura/wp-all-import-pro": "^4.8",
         "log1x/acf-composer": "^2.1",
         "log1x/modern-acf-options": "^1.0",
         "log1x/modern-login": "^1.0",
@@ -185,13 +185,13 @@
         "roots/bedrock-autoloader": "^1.0",
         "roots/bedrock-disallow-indexing": "^2.0",
         "roots/soil": "^4.1",
-        "roots/wordpress": "6.2.2",
-        "roots/wp-config": "1.0.0",
+        "roots/wordpress": "^6.2.2",
+        "roots/wp-config": "^1.0.0",
         "roots/wp-password-bcrypt": "1.1.0",
         "roots/wp-stage-switcher": "^2.2",
         "stoutlogic/acf-builder": "^1.12",
         "vlucas/phpdotenv": "^5.5",
-        "wpackagist-plugin/ajax-search-for-woocommerce": "*",
+        "wpackagist-plugin/ajax-search-for-woocommerce": "1.4",
         "wpackagist-plugin/insta-gallery": "^4.1",
         "wpackagist-plugin/mailpoet": "^4.48",
         "wpackagist-plugin/updraftplus": "^1.23",
@@ -203,7 +203,7 @@
         "wpackagist-plugin/wordfence": "^7.10",
         "wpackagist-plugin/wordpress-seo": "^20.10",
         "wpackagist-plugin/wp-mail-smtp": "^3.9",
-        "wpengine/advanced-custom-fields-pro": "*"
+        "wpengine/advanced-custom-fields-pro": "5.9"
     },
     "require-dev": {
         "dealerdirect/phpcodesniffer-composer-installer": "^1.0",
