--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,14 @@
 # Application
-public/content/plugins/*
-!public/content/plugins/.gitkeep
-public/content/mu-plugins/*/
-!public/content/mu-plugins/editor/
-public/content/upgrade
-
-!public/content/uploads/.gitkeep
-public/content/cache/*
-public/dist/*
-public/content/updraft/*
+/public/content/plugins/*
+!/public/content/plugins/.gitkeep
+/public/content/mu-plugins/*
+!/public/content/mu-plugins/editor/
+/public/content/upgrade
+/public/content/cache/*
+/public/dist/*
+/public/content/updraft/*
+!/public/content/uploads/.gitkeep
+/public/content/uploads/*
 public/content/updraft/backup_2023-12-11-1011_Rolling_Donut_2b4440752065-uploads.zip
 # WordPress
 public/wp
