--- a/composer.json
+++ b/composer.json
@@ -198,6 +198,7 @@
         "wpackagist-plugin/regenerate-thumbnails": "^3.1",
         "wpackagist-plugin/updraftplus": "^1.23",
         "wpackagist-plugin/wc-multiple-email-recipients": "^1.4.0",
+        "wpackagist-plugin/woo-variation-swatches": "^2.0",
         "wpackagist-plugin/woocommerce": "^7.8",
         "wpackagist-plugin/woocommerce-gateway-stripe": "^7.4.3",
         "wpackagist-plugin/woocommerce-pdf-invoices": "^3.0.0",
