--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@roots/sage": "6.13.1",
     "@tailwindcss/forms": "^0.5.3",
     "@types/alpinejs": "^3.7.1",
+    "@types/jquery": "^3.5.29",
     "@types/leaflet": "^1.9.4",
     "@types/wordpress__block-editor": "11.5.1",
     "@types/wordpress__blocks": "12.5.0",
@@ -51,6 +52,7 @@
     "@splidejs/splide": "^4.1.4",
     "alpinejs": "^3.12.3",
     "flowbite": "^1.8.0",
+    "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
     "nice-select2": "^2.1.0",
     "postcss-loader": "^7.3.3",
