--- a/.gitignore
+++ b/.gitignore
@@ -10,7 +10,7 @@
 !/public/content/uploads/.gitkeep
 /public/content/uploads/*
 /public/content/uploads/2024/02/*
-/public/content/uploads/2024/03/*
+!/public/content/uploads/2023/08/*
 public/content/updraft/backup_2023-12-11-1011_Rolling_Donut_2b4440752065-uploads.zip
 # WordPress
 public/wp
