--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,7 @@
 /public/dist/*
 /public/content/updraft/*
 !/public/content/uploads/.gitkeep
-!/public/content/uploads/*
+/public/content/uploads/*
 public/content/updraft/backup_2023-12-11-1011_Rolling_Donut_2b4440752065-uploads.zip
 # WordPress
 public/wp
